@@ -1,3 +1,10 @@
+2013-11-13  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Unreviewed rollout of r159271, broke Mountain Lion build.
+
+        * History/WebHistory.h:
+        * History/WebHistory.mm:
+
 2013-11-13  Anders Carlsson  <andersca@apple.com>
 
         Deprecate WebHistory methods that use NSCalendarDate
